// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|TimeBoard AnnounceItem 1`] = `
.c0 {
  width: 698px;
  margin: 10px 10px 20px;
  padding: 15px;
  border: 1px solid #ddd;
  border-radius: 5px;
}

.c2 {
  background-color: rgb(76,83,109);
  padding: 5px;
  border-bottom: 1px solid rgb(36,41,58);
}

.c3 {
  display: inline-block;
  color: #fff;
  font-size: 22px;
  font-weight: 600;
  line-height: 33px;
  margin-bottom: 0;
}

.c5 {
  display: inline-block;
  font-size: 22px;
}

.c8 {
  color: orange;
}

.c6 {
  overflow: hidden;
}

.c7 {
  margin: 0;
  padding-left: 100%;
  display: inline-block;
  white-space: nowrap;
  vertical-align: middle;
  background-color: transparent;
  -webkit-animation: kFpyMg 6s linear infinite;
  animation: kFpyMg 6s linear infinite;
}

.c7:after {
  content: '';
  white-space: nowrap;
  padding-right: 50px;
}

.c1 {
  background-color: rgb(76,83,109);
  color: #fff;
}

.c4 {
  background-color: #222;
}

@media (min-width:768px) {
  .c2 {
    padding-left: 40px;
  }
}

@media (min-width:450px) {
  .c3 {
    -webkit-letter-spacing: 0.1em;
    -moz-letter-spacing: 0.1em;
    -ms-letter-spacing: 0.1em;
    letter-spacing: 0.1em;
  }
}

@media (max-width:768px) {
  .c4 {
    padding: 0 5px;
  }
}

@media (min-width:768px) {
  .c4 {
    padding: 0 20px;
  }
}

@media (min-width:1170px) {
  .c4 {
    padding: 0 50px;
  }
}

<div
  className="c0"
  width={698}
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h4
        className="c3"
      >
        本日のバス
      </h4>
      
    </div>
    <div
      className="c4"
    >
      <div
        className="row"
      >
        <div
          className="c5 col-xl-12 col-md-12"
        >
          <div
            className="c6"
          >
            <p
              className="c7"
            >
              <span
                className="c8"
              >
                本日の運行は終了しました
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|TimeBoard BulletinHeader 1`] = `
.c0 {
  width: 698px;
  margin: 10px 10px 20px;
  padding: 15px;
  border: 1px solid #ddd;
  border-radius: 5px;
}

.c1 {
  background-color: rgb(76,83,109);
  padding: 5px;
  border-bottom: 1px solid rgb(36,41,58);
}

.c2 {
  display: inline-block;
  color: #fff;
  font-size: 22px;
  font-weight: 600;
  line-height: 33px;
  margin-bottom: 0;
}

.c3 {
  color: #fff;
}

@media (min-width:768px) {
  .c1 {
    padding-left: 40px;
  }
}

@media (min-width:450px) {
  .c2 {
    -webkit-letter-spacing: 0.1em;
    -moz-letter-spacing: 0.1em;
    -ms-letter-spacing: 0.1em;
    letter-spacing: 0.1em;
  }
}

<div
  className="c0"
  width={698}
>
  <div
    className="c1"
  >
    <h4
      className="c2"
    >
      sample
    </h4>
    <span
      className="c3"
    >
      example
    </span>
  </div>
</div>
`;

exports[`Storyshots Components|TimeBoard TimeBoard 1`] = `
.c0 {
  width: 698px;
  margin: 10px 10px 20px;
  padding: 15px;
  border: 1px solid #ddd;
  border-radius: 5px;
}

.c2 {
  background-color: rgb(76,83,109);
  padding: 5px;
  border-bottom: 1px solid rgb(36,41,58);
}

.c3 {
  display: inline-block;
  color: #fff;
  font-size: 22px;
  font-weight: 600;
  line-height: 33px;
  margin-bottom: 0;
}

.c4 {
  color: #fff;
}

.c6 {
  display: inline-block;
  font-size: 24px;
  color: greenyellow;
}

.c7 {
  display: inline-block;
  font-size: 26px;
  line-height: 35px;
  color: orange;
}

.c8 {
  display: inline-block;
  font-size: 22px;
}

.c11 {
  color: orange;
}

.c13 {
  color: red;
}

.c12 {
  color: greenyellow;
}

.c9 {
  overflow: hidden;
}

.c10 {
  margin: 0;
  padding-left: 100%;
  display: inline-block;
  white-space: nowrap;
  vertical-align: middle;
  background-color: transparent;
  -webkit-animation: kFpyMg 6s linear infinite;
  animation: kFpyMg 6s linear infinite;
}

.c10:after {
  content: '';
  white-space: nowrap;
  padding-right: 50px;
}

.c1 {
  background-color: rgb(76,83,109);
  color: #fff;
}

.c5 {
  background-color: #222;
}

@media (min-width:768px) {
  .c2 {
    padding-left: 40px;
  }
}

@media (min-width:450px) {
  .c3 {
    -webkit-letter-spacing: 0.1em;
    -moz-letter-spacing: 0.1em;
    -ms-letter-spacing: 0.1em;
    letter-spacing: 0.1em;
  }
}

@media (max-width:768px) {
  .c5 {
    padding: 0 5px;
  }
}

@media (min-width:768px) {
  .c5 {
    padding: 0 20px;
  }
}

@media (min-width:1170px) {
  .c5 {
    padding: 0 50px;
  }
}

<div
  className="c0"
  width={698}
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h4
        className="c3"
      >
        学校
      </h4>
      <span
        className="c4"
      >
        行き（みなみの発）
      </span>
    </div>
    <div
      className="c5"
    >
      <div
        className="row"
      >
        <div
          className="c6 col-md-3 col-6"
        >
          先発
        </div>
        <div
          className="c7 col-md-3 col-6"
        >
          10:10
        </div>
        <div
          className="c8 col-md-6 col-12"
        >
          <div
            className="c9"
          >
            <p
              className="c10"
            >
              <span
                className="c11"
              >
                シャトル運行中
              </span>
              <span
                className="c12"
              >
                のため、
              </span>
              <span
                className="c11"
              >
                時間が前後する場合
              </span>
              <span
                className="c12"
              >
                があります
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h4
        className="c3"
      >
        学校
      </h4>
      <span
        className="c4"
      >
        行き（八王子発）
      </span>
    </div>
    <div
      className="c5"
    >
      <div
        className="row"
      >
        <div
          className="c6 col-md-3 col-6"
        >
          <span
            className="c13"
          >
            最終
          </span>
        </div>
        <div
          className="c7 col-md-3 col-6"
        >
          10:10
        </div>
        <div
          className="c8 col-md-6 col-12"
        >
          <div
            className="c9"
          >
            <p
              className="c10"
            >
              <span
                className="c11"
              >
                学校
              </span>
              <span
                className="c12"
              >
                行き
              </span>
              <span
                className="c13"
              >
                最終バス
              </span>
              <span
                className="c12"
              >
                です。
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h4
        className="c3"
      >
        みなみの
      </h4>
      <span
        className="c4"
      >
        行き（八王子発）
      </span>
    </div>
    <div
      className="c5"
    >
      <div
        className="row"
      >
        <div
          className="c8 col-xl-12 col-md-12"
        >
          <div
            className="c9"
          >
            <p
              className="c10"
            >
              <span
                className="c11"
              >
                本日の運行は終了しました
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|TimeBoard TimeBoardItem 1`] = `
.c0 {
  width: 698px;
  margin: 10px 10px 20px;
  padding: 15px;
  border: 1px solid #ddd;
  border-radius: 5px;
}

.c2 {
  background-color: rgb(76,83,109);
  padding: 5px;
  border-bottom: 1px solid rgb(36,41,58);
}

.c3 {
  display: inline-block;
  color: #fff;
  font-size: 22px;
  font-weight: 600;
  line-height: 33px;
  margin-bottom: 0;
}

.c4 {
  color: #fff;
}

.c6 {
  display: inline-block;
  font-size: 24px;
  color: greenyellow;
}

.c7 {
  display: inline-block;
  font-size: 26px;
  line-height: 35px;
  color: orange;
}

.c8 {
  display: inline-block;
  font-size: 22px;
}

.c11 {
  color: orange;
}

.c12 {
  color: greenyellow;
}

.c9 {
  overflow: hidden;
}

.c10 {
  margin: 0;
  padding-left: 100%;
  display: inline-block;
  white-space: nowrap;
  vertical-align: middle;
  background-color: transparent;
  -webkit-animation: kFpyMg 6s linear infinite;
  animation: kFpyMg 6s linear infinite;
}

.c10:after {
  content: '';
  white-space: nowrap;
  padding-right: 50px;
}

.c1 {
  background-color: rgb(76,83,109);
  color: #fff;
}

.c5 {
  background-color: #222;
}

@media (min-width:768px) {
  .c2 {
    padding-left: 40px;
  }
}

@media (min-width:450px) {
  .c3 {
    -webkit-letter-spacing: 0.1em;
    -moz-letter-spacing: 0.1em;
    -ms-letter-spacing: 0.1em;
    letter-spacing: 0.1em;
  }
}

@media (max-width:768px) {
  .c5 {
    padding: 0 5px;
  }
}

@media (min-width:768px) {
  .c5 {
    padding: 0 20px;
  }
}

@media (min-width:1170px) {
  .c5 {
    padding: 0 50px;
  }
}

<div
  className="c0"
  width={698}
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h4
        className="c3"
      >
        学校
      </h4>
      <span
        className="c4"
      >
        行き（みなみの発）
      </span>
    </div>
    <div
      className="c5"
    >
      <div
        className="row"
      >
        <div
          className="c6 col-md-3 col-6"
        >
          先発
        </div>
        <div
          className="c7 col-md-3 col-6"
        >
          10:10
        </div>
        <div
          className="c8 col-md-6 col-12"
        >
          <div
            className="c9"
          >
            <p
              className="c10"
            >
              <span
                className="c11"
              >
                シャトル運行中
              </span>
              <span
                className="c12"
              >
                のため、
              </span>
              <span
                className="c11"
              >
                時間が前後する場合
              </span>
              <span
                className="c12"
              >
                があります
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
